syntax = "proto3";

package authentication;

option go_package = "todo-back/infrastructure/handler/grpc/proto_go_gen/authentication";

import "google/protobuf/timestamp.proto";

service Authentication {
  rpc SignUp(SignUpInput) returns (SignUpOutput) {}
  rpc SignIn(SignInInput) returns (SignInOutput) {}
  rpc SignOut(SignOutInput) returns (SignOutOutput) {}
}

message SignUpInput {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignUpOutput {
  optional Session session = 1;
  UserSignUpStatus status = 2;
}

message SignInInput {
  string email = 1;
  string password = 2;
}

message SignInOutput { Session session = 1; }

message SignOutInput { Session session = 1; }

message SignOutOutput {}

message Session {
  string session = 1;
  optional google.protobuf.Timestamp expire_time = 2;
}

enum UserSignUpStatus {
  SignupSignUpStatusUnknown = 0;
  SignupSignUpStatusAllowed = 1;
  SignupSignUpStatusWaitForAllow = 2;
  SignupSignUpStatusDenied = 3;
}
